--- a/association/association.html
+++ b/association/association.html
@@ -39,7 +39,7 @@
 		
 	</style>
 	<body>
-		<div id="slider" class="mui-slider">
+		<div id="slider">
 		    <div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" id="segmented">
 		        <div>
 		            <a class="mui-control-item mui-active" href="#item1mobile">简介</a>
@@ -49,16 +49,16 @@
 		    </div>
 
 
-            <div class="mui-slider-group" style="margin-top: 39px;">
+            <div class="mui-slider-group mui-slider" style="margin-top: 39px;">
                 <div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
-                    <ul class="mui-table-view">
+                    <ul class="">
                         <li class="mui-table-view-cell">
                           <div id="association"></div>  
                         </li>
                     </ul>
                 </div>
                 <div id="item2mobile" class="mui-slider-item mui-control-content ">
-                    <ul class="mui-table-view">
+                    <ul class="">
                         <li class="mui-table-view-cell">
                             
                             <div id="jiagou"></div>
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div id="item3mobile" class="mui-slider-item mui-control-content ">
-                    <ul class="mui-table-view">
+                    <ul class="">
                         <li class="mui-table-view-cell">
                             <div id="mingdan"></div>
                         </li>
