认证结果头像的默认图

--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="memberImage">
 					<div class="Img_img" id="faceP">
-
+						<img src="../images/111.jpg" id="imgFacephoto" height="82px">
 					</div>
 				</div>
 			</div>
