赛事，培训，公告标题换行 认证字体改变，去掉资格证信息

--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -113,8 +113,12 @@
 			}
 
 			.tittle{
+				width:100%!important;
 				font-size: 16px;
 				color: #333333;
+				white-space: normal;
+				word-break:break-all;
+				line-height:20px;
 			}
 		</style>
 	</head>
