--- a/announce/announce.html
+++ b/announce/announce.html
@@ -102,6 +102,11 @@
 			.saiNav a {
 				flex: 1;
 			}*/
+			.mui-ellipsis{
+				word-break:break-all;
+				white-space: normal;
+				line-height:20px;
+			}
 		</style>
 	</head>
 
