--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -46,12 +46,16 @@
 		  margin-top: 50%;
 		  text-align: center;
 		}
+		#resultUl li .commonRight{
+			color:#333333;
+			font-size:0.32rem;
+		}
 	</style>
 
 	<body>
 		<div class="identifyResult"></div>
 		<div id="loadingdiv"><img id="loadingP" src="../images/timg.gif"/></div>
-		<ul id="certInfor" class="certInfor" style="padding-bottom: 150px;">
+		<ul id="certInfor" class="certInfor" style="padding-bottom: 150px;display:none">
 
 		</ul>
 		<div class="NOMsg"></div>
@@ -100,9 +104,9 @@
 				<li><span class="commonColor">会员状态：</span><span id="memberStatus" class="commonRight">激活</span></li>
 				<li><span class="commonColor">会员开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
 				<li><span class="commonColor">会员到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
-				<li><span class="commonColor">办理地址：</span><span class="commonRight">{{address}}</span></li>
+				<li><span class="commonColor address">办理地址：</span><span class="commonRight">{{address.substring(0,17)}}</span></li>
 				<li><span class="commonColor">电话：</span><span class="commonRight">{{phone}}</span></li>
-				<li><span class="commonColor">地址：</span><span class="commonRight">{{address}}</span></li>
+				<li><span class="commonColor address">地址：</span><span class="commonRight">{{address.substring(0,17)}}</span></li>
 			</ul>
 		</script>
 
