--- a/training/training_list.html
+++ b/training/training_list.html
@@ -115,8 +115,12 @@
 			}
 
 			.tittle{
+				width:100%!important;
 				font-size: 16px;
 				color: #333333;
+				white-space: normal;
+				word-break:break-all;
+				line-height:20px;
 			}
 		</style>
 	</head>
