新闻标题换行 认证结果查询资格证信息

--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -50,12 +50,15 @@
 			color:#333333;
 			font-size:0.32rem;
 		}
+		.toggle{
+			display:none;
+		}
 	</style>
 
 	<body>
 		<div class="identifyResult"></div>
 		<div id="loadingdiv"><img id="loadingP" src="../images/timg.gif"/></div>
-		<ul id="certInfor" class="certInfor" style="padding-bottom: 150px;display:none">
+		<ul id="certInfor" class="certInfor">
 
 		</ul>
 		<div class="NOMsg"></div>
