--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -107,9 +107,9 @@
 				<li><span class="commonColor">会员状态：</span><span id="memberStatus" class="commonRight">激活</span></li>
 				<li><span class="commonColor">会员开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
 				<li><span class="commonColor">会员到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
-				<li><span class="commonColor address">办理地址：</span><span class="commonRight">{{address.substring(0,17)}}</span></li>
+				<li><span class="commonColor address">办理地址：</span><span class="commonRight" style="width:200px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;">{{address}}</span></li>
 				<li><span class="commonColor">电话：</span><span class="commonRight">{{phone}}</span></li>
-				<li><span class="commonColor address">地址：</span><span class="commonRight">{{address.substring(0,17)}}</span></li>
+				<li><span class="commonColor address">地址：</span><span class="commonRight" style="width:200px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;">{{address}}</span></li>
 			</ul>
 		</script>
 
