--- a/training/trainingContent.html
+++ b/training/trainingContent.html
@@ -8,9 +8,11 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 		<link rel="stylesheet" href="../css/mui.min.css">
-		<link rel="stylesheet" href="../css/training.css" />
+		<link rel="stylesheet" href="../css/training1.css" />
+		<link rel="stylesheet" href="../css/iconfont.css" />
 		<script src="../js/jquery-1.9.1.min.js"></script>
 		<script src="../js/flexable.js"></script>
+		<script src="../js/artTemplate.js"></script>
 		<style>
 			body{
 				background: #fff;
@@ -28,40 +30,107 @@
 			/* table{
 				border：1px solid #000;
 			} */
+			.bord{
+				display:inline-block;
+				width: 6px;
+				height: 30px;
+				background-color:#3385ff;
+				border-radius:6px;
+			}
 		</style>
 	</head>
 
 	<body>
-		<div class="peixunCon_box">
+	<div class="peixunCon_box">
+			<!-- <div class="mui-table-view peixun_info">
+				<h1 class="mui-h4 mui-table-view-cell mui-collapse">2017年全国大众跆拳道一级以上裁判员年审复训培训班</h1>
+				<div id="Time" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon iconfont icon-time"></i>
+					<p class="">培训时间</p>
+					<span class="">2017年12月22日-12月28日</span>
+				</div>
+				<div id="Adresse" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon mui-icon-location"></i>
+					<p>培训地址</p>
+					<span>海淀区 人民大学</span>
+				</div>
+				<div id="Contact" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon mui-icon-person"></i>
+					<p>负责人</p>
+					<span>李峰</span>
+				</div>
+				<div id="Phone" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon mui-icon-phone"></i>
+					<p>联系电话</p>
+					<span>010-88888888</span>
+				</div>
+			</div>
+			<div class="peixun_new mui-content-padded">
+				<h2 class="mui-h4"><i class="bord"></i>培训详情</h2>
+				<p class="mui-text-justify">所谓竞技跆拳道是指在统一的礼仪和规则要求下，具体分析评判从跆拳道总体技术中选出的一些极其重要的典型技术的优劣，是对技术动作本身和练习者掌握技术运用能力两方面进行的综合比较。而普通跆拳道则是指包括了所有有关跆拳道礼仪、技术、精神、哲学思想及文化价值在内的全部内容，其中更验和生产的关系。</p>
+			</div>
+			<button class="mui-btn mui-btn-primary mui-btn-block" onclick="myUrl()">立即报名</button> -->
+		</div>
+		<script type="text/html" id="trainingTmp">
+			<div class="mui-table-view peixun_info">
+				<h1 class="mui-h4 mui-table-view-cell mui-collapse">{{Title}}</h1>
+				<div id="Time" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon iconfont icon-time"></i>
+					<p class="">培训时间</p>
+					<span class="">{{TrainTime}}</span>
+				</div>
+				<div id="Adresse" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon mui-icon-location"></i>
+					<p>培训地址</p>
+					<span>{{Address}}</span>
+				</div>
+				<div id="Contact" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon mui-icon-person"></i>
+					<p>负责人</p>
+					<span>{{Principal}}</span>
+				</div>
+				<div id="Phone" class="mui-table-view-cell mui-collapse">
+					<i class="mui-icon mui-icon-phone"></i>
+					<p>联系电话</p>
+					<span>{{Phone}}</span>
+				</div>
+			</div>
+			<div class="peixun_new mui-content-padded">
+				<h2 class="mui-h4"><i class="bord"></i>培训详情</h2>
+				<p class="mui-text-justify">{{#content}}</p>
+			</div>
+			<button class="mui-btn mui-btn-primary mui-btn-block" id="isSignUp" onclick="btnOpen()">立即报名</button>
+		</script>
+		<!-- <div class="peixunCon_box">
 			<div class="peixun_new mui-content-padded">
 				<h2 class="mui-h4 mui-text-center"></h2>
 				<p class="mui-text-justify"></p>
 			</div>
 			<div class="mui-table-view peixun_info">
 				<div id="con_name" class="mui-table-view-cell mui-collapse">
-					<p class="">培训项目名称：</p>
-					<span class=""></span>
+					<p><i class="time"></i>培训时间：</p>
+					<span class="">123</span>
 				</div>
 				<div id="con_age" class="mui-table-view-cell mui-collapse">
-					<p>出生年龄段：</p>
-					<span></span>
+					<p><i class="mui-icon mui-icon-location"></i>培训地址：</p>
+					<span> 123</span>
 				</div>
 				<div id="con_six" class="mui-table-view-cell mui-collapse">
-					<p>男女要求：</p>
-					<span></span>
+					<p><i class="mui-icon mui-icon-person"></i>负责人：</p>
+					<span>123</span>
 				</div>
 				<div id="con_weight" class="mui-table-view-cell mui-collapse">
-					<p>体重要求：</p>
+					<p><i class="mui-icon mui-icon-phone"></i>联系电话：</p>
 					<span></span>
 				</div>
 			</div>
-			<button class="mui-btn mui-btn-primary mui-btn-block" id="isSignUp" style="display:none">立即报名</button>
+
+		</div> -->
+
+
+
+<!-- <button class="mui-btn mui-btn-primary mui-btn-block" id="isSignUp" style="display:none">立即报名</button> -->
 			<br />
-		</div>
-
-
-
-
 		<script>
 			function GetQueryString(name) {
 				var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
@@ -77,6 +146,10 @@
 			function btnOpen(id,type) {
 				window.location.href = "segue://id=" + id+"&type="+TRAIN;
 			}
+
+			// function btnOpen(id,type) {
+			// 	window.location.href = "training_signup.html?id=" + id+"&apply_enabled="+enabled;
+			// }
 			var urlPath="http://47.93.192.128:5001/";
 			var DetailUrl = urlPath+"Train/TrainDetail";
 			//默认加载
@@ -89,30 +162,21 @@
 				},
 				datatype: "json",
 				success: function(data) {
-					console.log(data)
+					// console.log(data)
 					data = eval('(' + data + ')');
 					console.log(data)
-					var con_h2=data.Data.Data.Title;
-					var con_con=data.Data.Data.content;
-					$(".peixun_new>h2").html(con_h2)
-					$(".peixun_new>p").html(con_con)
-					// console.log($(".peixun_new>p").find("table"))
-					$(".peixun_new>p").find("table").css('border','1px solid #8f8f94').css('margin','auto')
-					$(".peixun_new>p").find("table>tbody>tr>td").css('border','1px solid #8f8f94').css('padding','2px')
-					var con_name=data.Data.Data.gameName;
-					var con_age=data.Data.Data.BirthAge;
-					var con_six=data.Data.Data.genderClaim;
-					var con_weight=data.Data.Data.weightClaim;
-					$("#con_name>span").html(con_name)
-					$("#con_age>span").html(con_age)
-					$("#con_six>span").html(con_six)
-					$("#con_weight>span").html(con_weight)
+					var data = data.Data.Data
+					var html = template("trainingTmp",data);
+					$(".peixunCon_box").html(html);
+					$(".peixun_new").find("table").css('border','1px solid #8f8f94').css('margin','auto')
+					$(".peixun_new").find("table>tbody>tr>td").css('border','1px solid #8f8f94').css('padding','2px')
 					$(".mui-btn-block").click(function(){
-						btnOpen(id,'+type+')
+						// btnOpen(id,enabled);
+						btnOpen(id,'+type+');
 					})
-					if(data.Data.Data.IsSignUp == true && enabled == 1){
+					if(data.IsSignUp == true && enabled == 1){
 						$("#isSignUp").css("display","block");
-					}else if(data.Data.Data.IsSignUp == false && enabled == 0){
+					}else if(data.IsSignUp == false && enabled == 0){
 						$("#isSignUp").css("display","none");
 					}
 				},
