--- a/searchList/searchContentS.html
+++ b/searchList/searchContentS.html
@@ -70,6 +70,7 @@
 				success: function(data) {
 
 					data = eval('(' + data + ')');
+					console.log(data)
 
 					var fragment = document.createDocumentFragment(); //创建一个代码片段
 					var div = document.createElement('div');
