--- a/training/training_list.html
+++ b/training/training_list.html
@@ -122,6 +122,9 @@
 				word-break:break-all;
 				line-height:20px;
 			}
+			.mui-scroll-wrapper{
+				position:absolute;
+			}
 		</style>
 	</head>
 
