--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -120,6 +120,9 @@
 				word-break:break-all;
 				line-height:20px;
 			}
+			.mui-scroll-wrapper{
+				position:absolute;
+			}
 		</style>
 	</head>
 
@@ -311,6 +314,7 @@
 				showCityPickerButton.addEventListener('tap',
 					function(event) {
 						cityPicker.show(function(items) {
+
 							cityResult.innerText = items[0].text + items[1].text;
 							var cityname = items[1].text;
 							var provice = items[0].text;
