--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -29,9 +29,8 @@
 		}
 		.certInfor li{
 			line-height: 1.07rem;
-            border-bottom: 6px solid #f1f1f1;;
+            border-bottom: 6px solid #f1f1f1;
 		    padding: 0 0.32rem;
-
 		}
 		.certList{
 			padding: 10px;
@@ -45,10 +44,6 @@
 		#loadingdiv{
 		  margin-top: 50%;
 		  text-align: center;
-		}
-		#resultUl li .commonRight{
-			color:#333333;
-			font-size:0.32rem;
 		}
 		.toggle{
 			display:none;
@@ -75,8 +70,8 @@
 				</div>
 			</div>
 			<ul id="resultUl">
-				<li><span class="commonColor">姓名：</span><span class="commonRight">{{name}}</span></li>
-				<li><span class="commonColor">性别：</span>
+				<li class="clearfix"><span class="commonColor">姓名：</span><span class="commonRight">{{name}}</span></li>
+				<li class="clearfix"><span class="commonColor">性别：</span>
 					{{if sex == 1}}
 					   <span class="commonRight">男</span>
 					{{else if sex == 2}}
@@ -85,10 +80,10 @@
 					   <span class="commonRight"></span>
 					{{/if}}
 				</li>
-				<li><span class="commonColor">会员编号：</span><span id="memberNumber" class="commonRight">{{userNo}}</span></li>
-				<li><span class="commonColor">出生日期：</span><span id="memberBirth" class="commonRight">{{birthday}}</span></li>
-				<li><span class="commonColor">会员证开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
-				<li><span class="commonColor">会员证到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
+				<li class="clearfix"><span class="commonColor">会员编号：</span><span id="memberNumber" class="commonRight">{{userNo}}</span></li>
+				<li class="clearfix"><span class="commonColor">出生日期：</span><span id="memberBirth" class="commonRight">{{birthday}}</span></li>
+				<li class="clearfix"><span class="commonColor">会员证开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
+				<li class="clearfix"><span class="commonColor">会员证到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
 			</ul>
 		</script>
 		<script type="text/html" id="identifyResult2">
@@ -103,13 +98,13 @@
 				</div>
 			</div>
 			<ul id="resultUl">
-				<li><span class="commonColor">会员名称：</span><span class="commonRight">{{name}}</span></li>
-				<li><span class="commonColor">会员状态：</span><span id="memberStatus" class="commonRight">激活</span></li>
-				<li><span class="commonColor">会员开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
-				<li><span class="commonColor">会员到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
-				<li><span class="commonColor address">办理地址：</span><span class="commonRight" style="width:200px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;">{{address}}</span></li>
-				<li><span class="commonColor">电话：</span><span class="commonRight">{{phone}}</span></li>
-				<li><span class="commonColor address">地址：</span><span class="commonRight" style="width:200px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;">{{address}}</span></li>
+				<li class="clearfix"><span class="commonColor">会员名称：</span><span class="commonRight">{{name}}</span></li>
+				<li class="clearfix"><span class="commonColor">会员状态：</span><span id="memberStatus" class="commonRight">激活</span></li>
+				<li class="clearfix"><span class="commonColor">会员开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
+				<li class="clearfix"><span class="commonColor">会员到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
+				<li class="clearfix"><span class="commonColor address">办理地址：</span><span class="commonRight" style="width:5rem;">{{address}}</span></li><!-- overflow: hidden; white-space: nowrap;text-overflow:ellipsis;-->
+				<li class="clearfix"><span class="commonColor">电话：</span><span class="commonRight">{{phone}}</span></li>
+				<li class="clearfix"><span class="commonColor address">地址：</span><span class="commonRight" style="width:5rem;">{{address}}</span></li>
 			</ul>
 		</script>
 
