赛事地区选择

--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -122,6 +122,10 @@
 			}
 			.mui-scroll-wrapper{
 				position:absolute;
+				/* top:40px; */
+			}
+			#scroll17{
+				top:40px;
 			}
 		</style>
 	</head>
