--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -53,9 +53,9 @@
 	<body>
 		<div class="identifyResult"></div>
 		<div id="loadingdiv"><img id="loadingP" src="../images/timg.gif"/></div>
-		<ul id="certInfor" class="certInfor">
+		<div id="certInfor" class="certInfor">
 
-		</ul>
+		</div>
 		<div class="NOMsg"></div>
 
 		<script type="text/html" id="identifyResult1">
@@ -102,7 +102,7 @@
 				<li class="clearfix"><span class="commonColor">会员状态：</span><span id="memberStatus" class="commonRight">激活</span></li>
 				<li class="clearfix"><span class="commonColor">会员开始日期：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>
 				<li class="clearfix"><span class="commonColor">会员到期日期：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
-				<li class="clearfix"><span class="commonColor address">办理地址：</span><span class="commonRight" style="width:5rem;">{{address}}</span></li><!-- overflow: hidden; white-space: nowrap;text-overflow:ellipsis;-->
+				<li class="clearfix"><span class="commonColor address">办理地址：</span><span class="commonRight" style="width:5rem;">{{address}}</span></li>
 				<li class="clearfix"><span class="commonColor">电话：</span><span class="commonRight">{{phone}}</span></li>
 				<li class="clearfix"><span class="commonColor address">地址：</span><span class="commonRight" style="width:5rem;">{{address}}</span></li>
 			</ul>
