搜索表格适应

--- a/searchList/searchContentNews.html
+++ b/searchList/searchContentNews.html
@@ -14,6 +14,21 @@
 		<!--<script src="../js/mui.min.js"></script>-->
 		<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script src="../js/flexable.js"></script>
+		<style type="text/css">
+			.announceDetailPageT table{
+				width:6.4rem!important;
+				box-sizing:border-box;
+				border:1px solid #8f8f94;
+				margin:auto;
+			}
+			.announceDetailPageT table tbody{
+				width:6.4rem!important;
+				/* border:1px solid #8f8f94; */
+			}
+			.announceDetailPageT table tbody tr td{
+				border:1px solid #8f8f94;
+			}
+		</style>
 
 	</head>
 
@@ -86,7 +101,6 @@
 						}
 
 					    fragment.appendChild(div);
-
 
 					}else{
 
