--- a/searchList/searchContentS.html
+++ b/searchList/searchContentS.html
@@ -100,7 +100,7 @@
 					}
 
 					document.querySelector(".mui-scroll").appendChild(fragment); //输出到#item1mobile的页面内容
-					$(".announceDetailPageT").find("table").css('border','1px solid #8f8f94').css('margin','auto');
+					$(".announceDetailPageT").find("table").css('border','1px solid #8f8f94').css('margin','auto').css('width', '6.4rem').css('text-align', 'center');
 					$(".announceDetailPageT").find("table>tbody>tr>td").css('border','1px solid #8f8f94').css('padding','2px');
 					if(enabled == 1){
 						$(".announceDetailPageT").find("button").css("display","block");
