--- a/training/trainingContent.html
+++ b/training/trainingContent.html
@@ -139,7 +139,7 @@
 					var data = data.Data.Data
 					var html = template("trainingTmp",data);
 					$(".peixunCon_box").html(html);
-					$(".peixun_new").find("table").css('border','1px solid #8f8f94').css('margin','auto')
+					$(".peixun_new").find("table").css('border','1px solid #8f8f94').css('margin','auto').css('width', '6.4rem').css('text-align', 'center');
 					$(".peixun_new").find("table>tbody>tr>td").css('border','1px solid #8f8f94').css('padding','2px')
 					$(".mui-btn-block").click(function(){
 						// btnOpen(id,enabled);
